[package]
name = "braid_axum_http"
version = "0.1.0"
edition = "2021"
authors = ["Braid Contributors"]
description = "Braid-HTTP protocol implementation for collaborative document synchronization with Diamond-Types CRDT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/braid-org/braid-axum-http"
keywords = ["http", "braid", "protocol", "sync", "streaming", "crdt"]
categories = ["network-programming", "data-structures"]

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.8"
tower = "0.5"
tower-http = "0.6"
hyper = "1.8"
http = "1.3"
bytes = "1.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = "0.3"

uuid = "1.18"
url = "2.5"
anyhow = "1.0"
thiserror = "2.0"

parking_lot = "0.12"
lru = "0.12"
base64 = "0.21"
regex = "1.11"

diamond-types = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"

